Fixes icons not showing before sliders. Refs #15
Technically pseudo elements are not allowed on inputs, though they work
in Chrome.

--- a/assets/styles/_components/_options.scss
+++ b/assets/styles/_components/_options.scss
@@ -1,5 +1,5 @@
-#base,
-#volume-control {
+#base-wrapper,
+#volume-control-wrapper {
     display:  block;
     margin:   30px 0 30px 30px;
     position: relative;
@@ -11,12 +11,12 @@
         width:               20px;
         height:              20px;
         position:            absolute;
-        top:                 -7px;
+        top:                 0;
         left:                -30px;
     }
 }
 
-#base {
+#base-wrapper {
     &::after {
         content:  attr(data-frequency);
         position: absolute;
@@ -29,7 +29,7 @@
     }
 }
 
-#volume-control {
+#volume-control-wrapper {
     &::before {
         background-image: url("../images/ico-sound.svg");
     }
